Fix post effect on firefox, resize after activation was missing

--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -149,19 +149,19 @@ body {
   top: -2px;
   margin: 0 8px;
 
-  @include animation( pulse 1s both infinite );
+  @include animation( pulse 1s both 7 );
 
   text-decoration:none;
 
   &:hover {
-    @include animation( none 1s both infinite );
+    @include animation( none 1s both 1 );
     color: #aaccff;
     background: #ffffff;
     box-shadow: 0px 0px 10px rgba( 0, 0, 0, 0.4 );
   }
 
   &:active {
-    @include animation( none 1s both infinite );
+    @include animation( none 1s both 1 );
     color: #aaccff;
     background: #eeeeee;
     box-shadow: 0px 0px 0px rgba( 0, 0, 0, 0.4 );
